--- a/css/rp_spieler.css
+++ b/css/rp_spieler.css
@@ -110,6 +110,17 @@
 
 /* Single Spieler Seite */
 /* -------------------- */
+.spieler-portrait-wrapper {
+  margin: 0 auto;
+  width: 300px;
+  height: 300px;
+  display: block;
+  margin-bottom: 30px;
+}
+.spieler-portrait-wrapper img {
+  width: 100%;
+  height: 100%;
+}
 
 /* Admin Seite */
 /* ----------- */
