--- a/css/rp_spieler.css
+++ b/css/rp_spieler.css
@@ -134,6 +134,10 @@
   width: 100%;
   height: 100%;
 }
+.single-rp_spieler .page th,
+.single-rp_spieler .page td {
+  text-align: center;
+}
 
 /* Admin Seite */
 /* ----------- */
